--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
         <ui-view></ui-view>
 
-        <script type="text/ng-template" id='/reviews.html'>
-          reviews page
+        <script type="text/ng-template" id='/home.html'>
+          home page
         </script>
 
         <script type="text/ng-template" id='/consultancy.html'>
@@ -35,23 +35,17 @@
         contact page
         </script>
 
-        <script type="text/ng-template" id="/home.html">
+        <script type="text/ng-template" id="/reviews.html">
   
-        <form ng-submit="addPost()">
+        <form ng-submit="addReview()">
           <div class='form-group'>
-            <input class='form-control' type="text" placeholder="Title" ng-model="title"></input>
-          </div>
-          <div class='form-group'>
-            <input class='form-control' type="text" placeholder="Link" ng-model="link"></input>
+            <input class='form-control' type="text" placeholder="Title" ng-model="text"></input>
           </div>
           <button type="submit" class="btn btn-primary">Post</button>
         </form> 
   
-        <div ng-repeat="post in posts | orderBy:'-upvotes'">
-          <span ng-click="incrementUpvotes(post)">^</span>
-          <a ng-show="post.link" href="{{post.link}}">{{post.title}}</a>
-          <span ng-hide="post.link">{{post.title}}</span>
-          - upvotes: {{post.upvotes}}
+        <div ng-repeat="review in reviews">
+          <span>{{review.text}}</span>
         </div>
 
       </div>
