added date to reviews

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               {{review.text}} - {{review.votes}} votes
             </div>
             <div class="panel-footer">
-              Review posted by {{review.name}}
+              Review posted by {{review.name}} on {{review.date}}
               <br>
               Did you find it Useful?
               <button ng-click='upvote(review)'>YES</button>
