added template to consultant page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,18 @@
         </script>
 
         <script type="text/ng-template" id='/consultancy.html'>
-          consultancy page
+          <div class="row">
+            <div class="col-sm-6 col-md-4">
+              <div class="thumbnail">
+                <img src="http://educationexpo.amritatv.com/images/fitness01.jpg" alt="">
+                <div class="caption">
+                  <h3>Consultant Name</h3>
+                  <p>Consultant Description</p>
+                  <p><a href="#" class="btn btn-primary" role="button">Contact Consultant</a></p>
+                </div>
+              </div>
+            </div>
+          </div>
         </script>
 
         <script type="text/ng-template" id='/equiptment.html'>
@@ -37,7 +48,7 @@
 
         <script type="text/ng-template" id="/reviews.html">
 
-
+        <h3>See what some of our clients have said about us:</h3>
   
         <form ng-submit="addReview()">
           <div class='form-group'>
