--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
   </head>
-  <body>
+  <body ng-controller='SettingsCtrl'>
 
     <ion-nav-bar class="bar-stable">
       <ion-nav-back-button>
