--- a/www/index.html
+++ b/www/index.html
@@ -17,12 +17,11 @@
   </head>
   <body ng-controller='SettingsCtrl'>
 
-    <ion-nav-bar class="bar-stable">
-      <ion-nav-back-button>
-      </ion-nav-back-button>
-    </ion-nav-bar>
-
     <ion-nav-view></ion-nav-view>
+
+    <ion-nav-bar class="bar-stable">
+      <ion-nav-back-button></ion-nav-back-button>
+    </ion-nav-bar>
 
   </body>
 </html>
