--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,7 @@
 
     <ion-nav-view></ion-nav-view>
 
-    <ion-nav-bar class="bar-positive">
+    <ion-nav-bar class="bar-calm">
       <ion-nav-back-button></ion-nav-back-button>
     </ion-nav-bar>
 
