added different style sheets to invert colours and increase text size

--- a/www/index.html
+++ b/www/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html ng-app="greenwichFitness">
+<html ng-app="greenwichFitness" ng-controller='SettingsCtrl'>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 
-    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <link ng-href="{{style}}" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
     <script src="http://maps.googleapis.com/maps/api/js"></script>
