--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+    <title>Greenwich School of Fitness</title>
 
     <link ng-href="{{style}}" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
