--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
   </head>
-  <body ng-controller='SettingsCtrl'>
+  <body>
 
     <ion-nav-view></ion-nav-view>
 
