can now change accessibility views

--- a/www/index.html
+++ b/www/index.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title>Greenwich School of Fitness</title>
 
-    <link ng-href="{{style}}" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-
     <script src="http://maps.googleapis.com/maps/api/js"></script>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="cordova.js"></script>
@@ -22,6 +19,9 @@
     <ion-nav-bar class="bar-calm">
       <ion-nav-back-button></ion-nav-back-button>
     </ion-nav-bar>
+
+    <link ng-href="{{settings.style}}" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
   </body>
 </html>
