added loading icon to invert button

--- a/www/index.html
+++ b/www/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html ng-app="greenwichFitness" ng-controller='SettingsCtrl'>
+<html ng-app="greenwichFitness" ng-controller="SettingsCtrl">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title>Greenwich School of Fitness</title>
+
+    <link ng-href="{{ settings.style }}" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
     <script src="http://maps.googleapis.com/maps/api/js"></script>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -19,9 +22,6 @@
     <ion-nav-bar class="bar-calm">
       <ion-nav-back-button></ion-nav-back-button>
     </ion-nav-bar>
-
-    <link ng-href="{{settings.style}}" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
 
   </body>
 </html>
