--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title>Greenwich School of Fitness</title>
 
-    <link ng-href="{{ settings.style }}" rel="stylesheet">
+    <link ng-href="lib/ionic/css/{{ settings.style }}" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
     <script src="http://maps.googleapis.com/maps/api/js"></script>
